force-app/main/default/objects/Unit_Question_Answer__c/Unit_Question_Answer__c.object-meta.xml
<CustomObject>
    <label>Unit Question Answer</label>
    <nameField>
        <displayFormat>UQA-{0000}</displayFormat>
        <label>Unit Question Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units Questions Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>