force-app/main/default/objects/Unit_Question_Answer__c/fields/User_Unit__c.field-meta.xml
<CustomField>
    <fullName>User_Unit__c</fullName>
    <label>User Unit</label>
    <referenceTo>User_Unit__c</referenceTo>
    <relationshipLabel>Units Questions Answers</relationshipLabel>
    <relationshipName>Units_Questions_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>