force-app/main/default/objects/Unit_Question_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>